--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h3><img src="img/1r.jpg" width="80" height="80"> MirAway <p>Создатель PaintSharp</p></h3>
             <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, Windows 12, SVPGames. Рисовщик.</p></h3>
             <h3><img src="img/3r.jpg" width="80" height="80"> Matbeq332<p>Разраб./Рисовщик</p></h3>
-            <h3><img src="img/4r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 12, XMB</p></h3>
+            <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB</p></h3>
             <a href="#header">Главная</a>
             <p>V 0.0.0.1</p>
         </footer>
