--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <header id="header">
+            
            <p><a href="#np">Наши проэкты</a> <a href="#nu">Наши разрабы</a></p> 
             <h1>Сайт разрабов</h1>
             <h1><img src="img/logo.png" width="100" height="100"></h1>
@@ -14,23 +15,25 @@
          <h3><img src="img/img1.png" width="80" height="80"> DN Windows 12<h3><img src="img/img2.png" width="80" height="80"> DN XMB</h3>
          <h3><img src="img/img3.png" width="80" height="80"> DN SVPGames</h3>
          <h1>Полезный софт</h1>
-         <h3><img src="img/img4.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1SsvRqtpwyJosgp6wiLPCdE-rbPcJ_YEO">Скачать DevelNext FXE 1.0</a></h3>
-         <h3><img src="img/img5.ico" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1TWSaGgciieEn5zdQ64S4m1gFLk1Ym3_V">Полезные пакеты для DevelNext</a></h3>
+         <h3><img src="img/img4.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1SsvRqtpwyJosgp6wiLPCdE-rbPcJ_YEO" class="btn">Скачать DevelNext FXE 1.0</a></h3>
+         <h3><img src="img/img5.ico" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1TWSaGgciieEn5zdQ64S4m1gFLk1Ym3_V" class="btn">Полезные пакеты для DevelNext</a></h3>
+         <h3><img src="img/img6.ico" width="80" height="80"> <a href="https://gms.yoyogames.com/GameMaker-Installer-2024.11.0.179.exe" class="btn">Скачать Game Maker</a></h3>
          <h1>Цитата месеца</h1>
          <h2>"Две иконки это как 2 полоски"</h2>
             <h2>-USB-Goose</h2>
          <h1>Программы</h1>
-         <h3><img src="img/img1.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1S9my9n09aM1J5sRMHPDSrukrF1blhnsC">DN windows 12 0.0.1.0</a></h3>
-         <h3><img src="img/img2.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nhCD5HB02xU63BezuYdcmF6gm65pf-FA">DN XMB</a></h3>
+         <h3><img src="img/img1.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1S9my9n09aM1J5sRMHPDSrukrF1blhnsC" class="btn">DN windows 12 0.0.1.0</a></h3>
+         <h3><img src="img/img2.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nhCD5HB02xU63BezuYdcmF6gm65pf-FA" class="btn">DN XMB</a></h3>
+         <h3><img src="img/img7.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nXbKyLtwQO65ZiI9XqlbcmIL5yVVmPUy" class="btn">Скачать PaintSharp</a></h3>
         </main>
         <footer>
             <h1 id="nu">Наши разрабы</h1>
             <h3><img src="img/1r.jpg" width="80" height="80"> MirAway <p>Создатель PaintSharp</p></h3>
-            <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, Windows 12, SVPGames. Рисовщик.</p></h3>
+            <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, SVPGames. Рисовщик.</p></h3>
             <h3><img src="img/3r.jpg" width="80" height="80"> Matbeq332<p>Разраб./Рисовщик</p></h3>
-            <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB</p></h3>
+            <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB, CIRKULOS</p></h3>
             <a href="#header">Главная</a>
-            <p>V 0.0.0.1</p>
+            <p>V 0.0.0.5</p>
         </footer>
     </body>
 </html>
