--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h3><img src="img/3r.jpg" width="80" height="80"> Matbeq332<p>Разраб./Рисовщик</p></h3>
             <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB, CIRKULOS</p></h3>
             <a href="#header">Главная</a>
+            <p>email: TJKcom2023@Outlook.com</p>
             <p>V 0.0.0.5</p>
         </footer>
     </body>
