--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html>
     <head>
         <title>Сайт разрабов</title>
+<html>
+    <head>
+        <title>Сайт разрабов</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <header id="header">
             
-           <p><a href="#np">Наши проэкты</a> <a href="#nu">Наши разрабы</a></p> 
+           <p><a href="#np" class="btn-w">Наши проэкты</a> <a href="#nu" class="btn-w">Наши разрабы</a></p> 
             <h1>Сайт разрабов</h1>
             <h1><img src="img/logo.png" width="100" height="100"></h1>
         </header>
@@ -16,8 +19,9 @@
          <h3><img src="img/img3.png" width="80" height="80"> DN SVPGames</h3>
          <h1>Полезный софт</h1>
          <h3><img src="img/img0.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1SsvRqtpwyJosgp6wiLPCdE-rbPcJ_YEO" class="btn">Скачать DevelNext FXE 1.0</a></h3>
-         <h3><img src="img/img5.ico" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1TWSaGgciieEn5zdQ64S4m1gFLk1Ym3_V" class="btn">Полезные пакеты для DevelNext</a></h3>
          <h3><img src="img/img6.ico" width="80" height="80"> <a href="https://gms.yoyogames.com/GameMaker-Installer-2024.11.0.179.exe" class="btn">Скачать Game Maker</a></h3>
+         <h3><img src="img/img01.ico" width="80" height="80"> <a href="https://vscode.download.prss.microsoft.com/dbazure/download/stable/cd4ee3b1c348a13bafd8f9ad8060705f6d4b9cba/VSCodeUserSetup-x64-1.96.4.exe" class="btn">Скачать Vscode</a></h3>
+         <h3><img src="img/img9.ico" width="80" height="80"> <a href="https://objects.githubusercontent.com/github-production-release-asset-2e65be/33014811/df96d3cb-ccc0-4b8d-b6b5-271744de9fa6?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250202%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250202T170930Z&X-Amz-Expires=300&X-Amz-Signature=cd838958f778b4acacc4a8d3ae7885476b223af189028e5733a686bfad845566&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dnpp.8.7.5.Installer.exe&response-content-type=application%2Foctet-stream" class="btn">Скачать Notepad++</a></h3>
          <h1>Цитата месеца</h1>
          <h2>"Две иконки это как 2 полоски"</h2>
             <h2>-USB-Goose</h2>
@@ -25,16 +29,20 @@
          <h3><img src="img/img1.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1S9my9n09aM1J5sRMHPDSrukrF1blhnsC" class="btn">DN windows 12 0.0.1.0</a></h3>
          <h3><img src="img/img2.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nhCD5HB02xU63BezuYdcmF6gm65pf-FA" class="btn">DN XMB</a></h3>
          <h3><img src="img/img7.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nXbKyLtwQO65ZiI9XqlbcmIL5yVVmPUy" class="btn">Скачать PaintSharp</a></h3>
+         <h1>Дополнительные инструменты</h1>
+         <h3><img src="img/img5.ico" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1TWSaGgciieEn5zdQ64S4m1gFLk1Ym3_V" class="btn">Полезные пакеты для DevelNext</a></h3>
+         <h3><img src="img/img8.ico" width="80" height="80"> <a href="https://drive.google.com/uc?export=download&id=1uMfY7W0vETDM8mhEGVq4clkqaiFy4H0V" class="btn">Иконки Windows 11</a></h3>
+         <h3><img src="img/img19.png" width="80" height="80"> <a href="https://sviatpisk.github.io/buttons.io/" class="btn">Css кнопки от sviatpisk</a></h3>
         </main>
         <footer>
             <h1 id="nu">Наши разрабы</h1>
             <h3><img src="img/1r.jpg" width="80" height="80"> MirAway <p>Создатель PaintSharp</p></h3>
-            <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, SVPGames. Рисовщик.</p></h3>
+            <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, Windows 12, SVPGames. Рисовщик.</p></h3>
             <h3><img src="img/3r.jpg" width="80" height="80"> Matbeq332<p>Разраб./Рисовщик</p></h3>
-            <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB, CIRKULOS</p></h3>
-            <a href="#header">Главная</a>
+            <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB</p></h3>
+            <a href="#header" class="btn-w">Главная</a>
             <p>email: TJKcom2023@Outlook.com</p>
-            <p>V 0.0.0.5</p>
+            <p>V 0.0.1.0</p>
         </footer>
     </body>
 </html>
