--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <h1>Дополнительные инструменты</h1>
          <h3><img src="img/img5.ico" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1TWSaGgciieEn5zdQ64S4m1gFLk1Ym3_V" class="btn">Полезные пакеты для DevelNext</a></h3>
          <h3><img src="img/img8.ico" width="80" height="80"> <a href="https://drive.google.com/uc?export=download&id=1uMfY7W0vETDM8mhEGVq4clkqaiFy4H0V" class="btn">Иконки Windows 11</a></h3>
-         <h3><img src="img/img19.png" width="80" height="80"> <a href="https://sviatpisk.github.io/buttons.io/" class="btn">Css кнопки от sviatpisk</a></h3>
+         <h3><img src="img/img19.PNG" width="80" height="80"> <a href="https://sviatpisk.github.io/buttons.io/" class="btn">Css кнопки от sviatpisk</a></h3>
         </main>
         <footer>
             <h1 id="nu">Наши разрабы</h1>
