--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <h3><img src="img/img1.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1S9my9n09aM1J5sRMHPDSrukrF1blhnsC" class="btn">DN windows 12 0.0.1.0</a></h3>
          <h3><img src="img/img2.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nhCD5HB02xU63BezuYdcmF6gm65pf-FA" class="btn">DN XMB</a></h3>
          <h3><img src="img/img7.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1nXbKyLtwQO65ZiI9XqlbcmIL5yVVmPUy" class="btn">Скачать PaintSharp</a></h3>
-         <h3><img src="img/img7.png" width="80" height="80"> <a href="https://drive.google.com/uc?export=download&id=1Nn8MWvNG1Ko9F3KA5V5hCZk6ybGE7EWx" class="btn">Скачать "Лысые Основы Обрзования и Учения" v.0.2</a></h3> 
+         <h3><img src="img/Снимок экрана 2025-06-08 142535.png" width="80" height="80"> <a href="https://drive.google.com/uc?export=download&id=1Nn8MWvNG1Ko9F3KA5V5hCZk6ybGE7EWx" class="btn">Скачать "Лысые Основы Обрзования и Учения" v.0.2</a></h3> 
          <h1>Дополнительные инструменты</h1>
          <h3><img src="img/img5.ico" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1TWSaGgciieEn5zdQ64S4m1gFLk1Ym3_V" class="btn">Полезные пакеты для DevelNext</a></h3>
          <h3><img src="img/img8.ico" width="80" height="80"> <a href="https://drive.google.com/uc?export=download&id=1uMfY7W0vETDM8mhEGVq4clkqaiFy4H0V" class="btn">Иконки Windows 11</a></h3>
