--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
             <h1><img src="img/logo.png" width="100" height="100"></h1>
         </header>
         <main>
-         <h1 id="np">Наши проэкты</h1>
-         <h3><img src="img/img1.png" width="80" height="80"> DN Windows 12<h3><img src="img/img2.png" width="80" height="80"> DN XMB</h3>
-         <h3><img src="img/img3.png" width="80" height="80"> DN SVPGames</h3>
+            <div>
+                <h1 id="np">Ахивы проэктов</h1>
+         <h3><img src="img/3r.jpg" width="80" height="80"> <a href="matbeq332.html" class="btn">Проэкты matbeq332</a></h3>
+        <h3><img src="img/4r.jpg" width="80" height="80"> <a href="USB-Goose.html" class="btn">Проэкты USB-goose</a></h3>
+         <h3><img src="img/2r.jpg" width="80" height="80"> <a href="sviatpisk.html" class="btn">Проэкты Sviatpisk</a></h3>
+            </div>
+    
          <h1>Полезный софт</h1>
          <h3><img src="img/img0.png" width="80" height="80"> <a href="http://drive.google.com/uc?export=download&id=1SsvRqtpwyJosgp6wiLPCdE-rbPcJ_YEO" class="btn">Скачать DevelNext FXE 1.0</a></h3>
          <h3><img src="img/img6.ico" width="80" height="80"> <a href="https://gms.yoyogames.com/GameMaker-Installer-2024.11.0.179.exe" class="btn">Скачать Game Maker</a></h3>
@@ -38,12 +42,12 @@
         <footer>
             <h1 id="nu">Наши разрабы</h1>
             <h3><img src="img/1r.jpg" width="80" height="80"> MirAway <p>Создатель PaintSharp</p></h3>
-            <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, Windows 12, SVPGames. Рисовщик.</p></h3>
+            <h3><img src="img/2r.jpg" width="80" height="80"> Sviatpisk <p>Создатель Windows 91, Windows 12, SVPGames, Лысые Основы. Рисовщик.</p></h3>
             <h3><img src="img/3r.jpg" width="80" height="80"> Matbeq332<p>Разраб./Рисовщик</p></h3>
             <h3><img src="img/4r.jpg" width="80" height="80"> USB-Goose <p>Создатель Windows 12, XMB</p></h3>
             <a href="#header" class="btn-w">Главная</a>
             <p>email: TJKcom2023@Outlook.com</p>
-            <p>V 0.0.1.1</p>
+            <p>V 0.0.1.5</p>
         </footer>
     </body>
 </html>
